owly office first

--- a/html/main.html
+++ b/html/main.html
@@ -41,7 +41,23 @@
             </div>
         </div>
 
+        <!-- <div class="foods">
+           <span class="image1"> <img src="../images/food1.jpg" alt=""  ></span>
+            <img src="../images/food2.jpg" alt="" >
+            <img src="../images/food3.jpg" alt="" >
+            <img src="../images/food4.jpg" alt="" >
+            <img src="../images/food5.jpg" alt="" >
+        </div> -->
+
     </div>
+
+    <div class="foods">
+         <img src="../images/food1.jpg" alt="" id="img2">
+         <img src="../images/food2.jpg" alt=""  id="img2">
+         <img src="../images/food3.jpg" alt=""  id="img2">
+         <img src="../images/food4.jpg" alt=""  id="img2" >
+         <img src="../images/food5.jpg" alt=""  id="img2" >
+     </div>
 
 </body>
 
