"card made and responsive also "

--- a/html/main.html
+++ b/html/main.html
@@ -9,55 +9,59 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
 </head>
+<style>
 
+</style>
 <body>
-    <div class="first">
+<div class="first">
 
-        <div class="navbar">
-            <div class="logo1">
-                <img class="logo" src="../images/logo.png" alt="">
-            </div>
-            <div class="button">
-                <i class="fa-solid fa-burger fa-2xl"></i>
-            </div>
+    <div class="navbar">
+        <div class="logo1">
+            <img class="logo" src="../images/logo.png" alt="">
         </div>
-
-        <div class="second">
-            <div class="side-content">
-                <div class="side-heading">
-                    <span>Dining</span><br>
-                    On The Lake
-                </div>
-                <div class="text">
-                    Ullamcorper malesuada proin libero nunc. Id semper risus in hendrerit gravida. Vulputate sagittis
-                    aliquam malesuada bibendum.
-
-                    Images from
-                </div>
-                <button class="menu">VIEW MENU</button>
-            </div>
-            <div>
-                <img class=" chef" src="../images/chef.jpg" alt="">
-            </div>
+        <div class="button">
+            <i class="fa-solid fa-burger fa-2xl"></i>
         </div>
+    </div>
 
-        <!-- <div class="foods">
-           <span class="image1"> <img src="../images/food1.jpg" alt=""  ></span>
-            <img src="../images/food2.jpg" alt="" >
-            <img src="../images/food3.jpg" alt="" >
-            <img src="../images/food4.jpg" alt="" >
-            <img src="../images/food5.jpg" alt="" >
-        </div> -->
+    <div class="second">
+        <div class="side-content">
+            <div class="side-heading">
+                <span>Dining</span><br>
+                On The Lake
+            </div>
+            <div class="text">
+                Ullamcorper malesuada proin libero nunc. Id semper risus in hendrerit gravida. Vulputate sagittis
+                aliquam malesuada bibendum.
 
+                Images from
+            </div>
+            <button class="menu">VIEW MENU</button>
+        </div>
+        <div>
+            <img class=" chef" src="../images/chef.jpg" alt="">
+        </div>
     </div>
 
     <div class="foods">
-         <img src="../images/food1.jpg" alt="" id="img2">
-         <img src="../images/food2.jpg" alt=""  id="img2">
-         <img src="../images/food3.jpg" alt=""  id="img2">
-         <img src="../images/food4.jpg" alt=""  id="img2" >
-         <img src="../images/food5.jpg" alt=""  id="img2" >
-     </div>
+        <img src="../images/food1.jpg" alt="">
+        <img src="../images/food2.jpg" alt="">
+        <img src="../images/food3.jpg" alt="">
+        <img src="../images/food4.jpg" alt="">
+        <img src="../images/food5.jpg" alt="">
+    </div>
+
+</div>
+
+
+<div id="two">
+<div class="text">
+    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+
+
+</div>
+
+</div>
 
 </body>
 
